--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/subratamondal1029/MERN-Project/issues"
   },
-  "homepage": "https://github.com/subratamondal1029/MERN-Project#readme"
+  "homepage": "https://github.com/subratamondal1029/MERN-Project#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
+  }
 }
